Update to BC 1.54 to enable U2F